# ventuno-object-tracking

./: .gitignore  AGENTS.md  LICENSE  PROJECT_CONTEXT.md  README.md  VENTUNO_Q_QNN_EXECUTORCH_RUNBOOK.md  YOLOX_CPU_ONNX.md  requirements-export.txt  requirements.txt
.claude/skills/ventuno-setup/: SKILL.md
.claude/skills/ventuno-setup/references/: create3-connection.md  executorch-qnn.md  ros-networking.md
docs/: PROJECT_CONTEXT.md  create3_connection.md  projecthub_description.md  setup.md
launch/: object_tracking.launch.py
scripts/: create3-usb-gadget.service  create3_usb_gadget.sh  download_models.py  fastdds_usb0.xml  install_tailscale_ssh.sh  install_ventuno_deps.sh
src/oak_camera/: CMakeLists.txt  package.xml
src/oak_camera/config/: camera.yaml
src/oak_camera/include/oak_camera/: oak_camera_node.hpp
src/oak_camera/launch/: camera.launch.py
src/oak_camera/src/: main.cpp  oak_camera_node.cpp
src/object_tracker/: package.xml  setup.py
src/object_tracker/config/: tracker.yaml
src/object_tracker/launch/: depth_follow_test.launch.py  movement_test.launch.py  tracker.launch.py
src/object_tracker/object_tracker/: movement_test.py  robot_tracker.py
src/object_tracker/test/: test_robot_tracker_depth.py
src/yolox_detector/: CMakeLists.txt  package.xml
src/yolox_detector/config/: detector.yaml
src/yolox_detector/include/yolox_detector/: yolox_detector_node.hpp
src/yolox_detector/launch/: dataset_detector.launch.py  detector.launch.py
src/yolox_detector/src/: cpu_backend.cpp  dataset_image_publisher_node.cpp  postprocess.cpp  qnn_backend.cpp  yolox_detector_node.cpp
tools/: export_yolox_cpu.py  export_yolox_onnx.py  export_yolox_qnn.py
