<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>oak_camera</name>
  <version>0.1.0</version>
  <description>ROS 2 driver for OAK-D Lite using DepthAI v3</description>
  <maintainer email="todo@todo.com">ventuno</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>cv_bridge</depend>
  <depend>depthai_v3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
